# ui_beacon

./: .gitignore  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
code_tests/: conftest.py  pytest.ini  test_basic.py  test_include_parsing.py  test_layout_components.py  test_navigation.py
code_tests/input_files/: test_all_components_maximal_attributes_app.uibl  test_all_components_minimal_attributes_app.uibl  test_correct_all_includes_app.uibl  test_include_with_addional_attributes_app.uibl  test_include_without_href_app.uibl  test_included_page_invalid_app.uibl  test_included_page_not_found_app.uibl  test_incorrect_ordering_app.uibl  test_invalid_xml_app.uibl  test_minimal_app_app.uibl  test_minimal_page_page.uibl  test_missing_footer_app.uibl  test_missing_header_app.uibl  test_missing_page_app.uibl  test_navigation_to_none_existing_page_app.uibl  test_navigation_to_own_page_app.uibl  test_page_name_does_not_end_with_page_app.uibl
docs/: index.md
llm_tests/: main.py
llm_tests/gmail/: gmail_app.uibl  gmail_inputs.json
llm_tests/gmail/pages/: accounts_import_settings_page.uibl  add_ons_settings_page.uibl  all_settings_page.uibl  filters_and_blocked_addresses_settings_page.uibl  forwarding_pop_imap_settings_page.uibl  general_settings_page.uibl  inbox_page.uibl  inbox_settings_page.uibl  label_settings_page.uibl  view_email_page.uibl
llm_tests/ui_beacon_lang_example/: page.html  ui_beacon_lang_example_app.uibl  ui_beacon_lang_example_inputs.json
llm_tests/ui_beacon_lang_example/pages/: about_page.uibl  contact_page.uibl
src/ui_beacon/: __init__.py  response_formats.py  ui_beacon.py  utils.py
src/ui_beacon/assets/: ui_beacon_lang_validator.xsd
src/ui_beacon_lang/: __init__.py  parser.py  ui_beacon_validator.xsd
tests/: main.py
tests/gmail/: ui_beacon_code.xml  ui_beacon_website.uibl
tests/gmail/pages/: accounts_import_settings_page.uibl  accounts_import_settings_page.xml  all_settings_page.uibl  all_settings_page.xml  filters_and_blocked_addresses_settings_page.uibl  general_settings_page.uibl  (+12 more)
(+2 files in other folders)
